--- a/occupancy_flow/configs/half_test_ui.yaml
+++ b/occupancy_flow/configs/half_test_ui.yaml
@@ -2,7 +2,7 @@ data:
   path: data/Humans
   input_type: half_seq
   test_split: test_new_individual
-  input_pointcloud_corresponding: false
+  input_pointcloud_corresponding: true
   half_seq_folder: pcl_half_seq
 training:
   out_dir:  out/half_test_ui
